--- a/alertmanager/alertmanager.yml.example
+++ b/alertmanager/alertmanager.yml.example
@@ -7,16 +7,17 @@ global:
 
 route:
   group_by: [ ... ] # 分组， ... 表示不分组
-  group_wait: 60s # 同一组 告警 需要等待多少s才能发出
-  group_interval: 5m # 同一组的多批次告警间隔多少秒后，才能发出
-  repeat_interval: 1h  # 重复告警要等待多久后才能再次发出去，目的是为了避免重复的消息发送多次
-  receiver: 'webhook' # receiver名称，对应 receivers.name
+  group_wait: 30s # 同一组 告警 需要等待多少s才能发出
+  group_interval: 3m # 同一组的多批次告警间隔多少秒后，才能发出
+  repeat_interval: 30m  # 重复告警要等待多久后才能再次发出去，目的是为了避免重复的消息发送多次
+  receiver: 'feishu' # receiver名称，对应 receivers.name
 
 # 配置报警方式
 receivers:
-  - name: 'webhook'
+  - name: 'feishu'
     webhook_configs:
-      - url: 'https://open.feishu.cn/open-apis/bot/v2/hook/your-api-key'
+      - url: 'http://prometheus-notifier:8080/notifier/feishu?lang=zh-CN&url=https://open.feishu.cn/open-apis/bot/v2/hook/{your-api-key}'
+        send_resolved: true
 
   - name: 'email'
     email_configs:
