docs: Update template

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 .env
-.data/
-alertmanager.yml
-grafana.ini
-prometheus.yml
 .idea
+.vscode/
+.swp
+.settings/
+bin/
+**/.DS_Store
+logs/
+.keystore/
+*.exe
+temp/
+.project
+.buildpath
+
