--- a/template/prometheus/prometheus.yml
+++ b/template/prometheus/prometheus.yml
@@ -28,3 +28,6 @@ scrape_configs:
     static_configs:
       - targets: [ 'node-exporter:9100' ]
 
+#  - job_name: 'cadvisor'
+#    static_configs:
+#      - targets: [ 'cadvisor:8080' ]
